[FIX] mass_mailing: force vertical align top on td/th element

--- a/addons/mass_mailing/static/src/less/themes/theme_default.less
+++ b/addons/mass_mailing/static/src/less/themes/theme_default.less
@@ -122,6 +122,10 @@
             color: @o_mm_def_color_eta;
         }
     }
+
+    td, th {
+        vertical-align: top;
+    }
 }
 
 // ===== Snippets (specific) =====
